--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.12",
+    "@chakra-ui/react": "^1.6.0",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^4",
+    "idb": "^6.0.0",
     "next": "10.2.0",
     "next-pwa": "^5.2.21",
     "react": "17.0.2",
