--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,30 @@
 {
+  "theme_color": "#009AD8",
+  "background_color": "#009AD8",
+  "display": "fullscreen",
+  "scope": "/",
+  "start_url": "/",
   "name": "PWA Offline Example",
   "short_name": "PWA Offline Example",
-  "theme_color": "#2196f3",
-  "background_color": "#2196f3",
-  "display": "standalone",
-  "scope": "/",
-  "start_url": "/?source=pwa",
+  "description": "PWA Offline Example",
   "icons": [
     {
-      "src": "/images/icons/icon-192x192.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/images/icons/icon-512x512.png",
+      "src": "/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
